--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Nexter",
   "version": "1.0.0",
   "description": "Nexter webpage",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
     "devserver": "live-server",
